Fix RBAC, CORS, animal deletion FK issue, deprecated Specification API